--- a/Order-Edge/package.json
+++ b/Order-Edge/package.json
@@ -11,13 +11,14 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.1.0",
+        "@tanstack/react-query": "^5.24.6",
         "axios": "^1.6.7",
-        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.50.1",
         "react-redux": "^9.1.0",
-        "react-router-dom": "^6.22.0"
+        "react-router-dom": "^6.22.0",
+        "react-vertical-timeline-component": "^3.6.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.55",
