--- a/Order-Edge/package.json
+++ b/Order-Edge/package.json
@@ -13,6 +13,7 @@
         "@reduxjs/toolkit": "^2.1.0",
         "@tanstack/react-query": "^5.24.6",
         "axios": "^1.6.7",
+        "framer-motion": "^11.0.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.50.1",
