--- a/Order-Edge/vercel.json
+++ b/Order-Edge/vercel.json
@@ -3,6 +3,10 @@
 		{
 			"source": "/(.*)",
 			"destination": "/index.html"
+		},
+		{
+			"source": "/api/:path*",
+			"destination": "http://localhost:9090/:path*"
 		}
 	]
 }
