--- a/Order-Edge/package.json
+++ b/Order-Edge/package.json
@@ -14,6 +14,8 @@
         "@tanstack/react-query": "^5.24.6",
         "axios": "^1.6.7",
         "framer-motion": "^11.0.8",
+        "moment": "^2.30.1",
+        "prop-type": "^0.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.50.1",
